# MyCppLibTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  License  Readme.md  conanfile.py
.github/workflows/: ci.yml
conan/: settings.yml
src/: CMakeLists.txt
src/MyCppLibTemplate/: Lib.cpp  Lib.h
test/: CMakeLists.txt  Test.cpp
